packages/swc/tests/errors/unsupported_node/input.ts
nameof(2 * 2);
nameof<() => void>();
